feat: 新增与openai接口对齐的接口
