# docs/swagger.yaml
@@ -23,6 +23,68 @@ definitions:
       stream:
         type: boolean
     type: object
+  model.OpenAIChatCompletionRequest:
+    properties:
+      messages:
+        items:
+          $ref: '#/definitions/model.OpenAIChatMessage'
+        type: array
+      stream:
+        type: boolean
+    type: object
+  model.OpenAIChatCompletionResponse:
+    properties:
+      choices:
+        items:
+          $ref: '#/definitions/model.OpenAIChoice'
+        type: array
+      created:
+        type: integer
+      id:
+        type: string
+      model:
+        type: string
+      object:
+        type: string
+      system_fingerprint:
+        type: string
+      usage:
+        $ref: '#/definitions/model.OpenAIUsage'
+    type: object
+  model.OpenAIChatMessage:
+    properties:
+      content:
+        type: string
+      role:
+        type: string
+    type: object
+  model.OpenAIChoice:
+    properties:
+      finish_reason:
+        type: string
+      index:
+        type: integer
+      logprobs:
+        type: string
+      message:
+        $ref: '#/definitions/model.OpenAIMessage'
+    type: object
+  model.OpenAIMessage:
+    properties:
+      content:
+        type: string
+      role:
+        type: string
+    type: object
+  model.OpenAIUsage:
+    properties:
+      completion_tokens:
+        type: integer
+      prompt_tokens:
+        type: integer
+      total_tokens:
+        type: integer
+    type: object
   model.ReplyResp:
     properties:
       content:
@@ -49,7 +111,7 @@ definitions:
         type: string
     type: object
 info:
-  contact: {}
+  contact: { }
   description: COZE-DISCORD-PROXY 代理服务
   title: COZE-DISCORD-PROXY
   version: 1.0.0
@@ -57,17 +119,17 @@ paths:
   /channel/create:
     post:
       consumes:
-      - application/json
+        - application/json
       description: 创建频道
       parameters:
-      - description: channelModel
-        in: body
-        name: channelModel
-        required: true
-        schema:
-          $ref: '#/definitions/model.ChannelReq'
+        - description: channelModel
+          in: body
+          name: channelModel
+          required: true
+          schema:
+            $ref: '#/definitions/model.ChannelReq'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Successful response
@@ -75,20 +137,20 @@ paths:
             $ref: '#/definitions/model.ChannelResp'
       summary: 创建频道
       tags:
-      - channel
+        - channel
   /channel/del/{id}:
     get:
       consumes:
-      - application/json
+        - application/json
       description: 删除频道
       parameters:
-      - description: id
-        in: path
-        name: id
-        required: true
-        type: string
+        - description: id
+          in: path
+          name: id
+          required: true
+          type: string
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Successful response
@@ -96,21 +158,21 @@ paths:
             type: string
       summary: 删除频道
       tags:
-      - channel
-  /chat:
+        - channel
+  /chat/:
     post:
       consumes:
-      - application/json
+        - application/json
       description: 发送消息
       parameters:
-      - description: chatModel
-        in: body
-        name: chatModel
-        required: true
-        schema:
-          $ref: '#/definitions/model.ChatReq'
+        - description: chatModel
+          in: body
+          name: chatModel
+          required: true
+          schema:
+            $ref: '#/definitions/model.ChatReq'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Successful response
@@ -118,21 +180,21 @@ paths:
             $ref: '#/definitions/model.ReplyResp'
       summary: 发送消息
       tags:
-      - chat
+        - chat
   /thread/create:
     post:
       consumes:
-      - application/json
+        - application/json
       description: 创建线程
       parameters:
-      - description: threadModel
-        in: body
-        name: threadModel
-        required: true
-        schema:
-          $ref: '#/definitions/model.ThreadReq'
+        - description: threadModel
+          in: body
+          name: threadModel
+          required: true
+          schema:
+            $ref: '#/definitions/model.ThreadReq'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: Successful response
@@ -140,5 +202,27 @@ paths:
             $ref: '#/definitions/model.ThreadResp'
       summary: 创建线程
       tags:
-      - thread
+        - thread
+  /v1/chat/completions/:
+    post:
+      consumes:
+        - application/json
+      description: 发送消息-openai
+      parameters:
+        - description: request
+          in: body
+          name: request
+          required: true
+          schema:
+            $ref: '#/definitions/model.OpenAIChatCompletionRequest'
+      produces:
+        - application/json
+      responses:
+        "200":
+          description: Successful response
+          schema:
+            $ref: '#/definitions/model.OpenAIChatCompletionResponse'
+      summary: 发送消息-openai
+      tags:
+        - chat -openai
 swagger: "2.0"
